# gitchat

./: Cargo.toml  README.md  README_ZH.md
.agents/gitchat-usage/: SKILL.md
.agents/gitchat-usage/agents/: openai.yaml
.agents/gitchat-usage/references/: operation-mapping.md
.agents/gitchat-usage/src/: lib.rs
docs/: example.md  example_zh.md  usage.md  usage_zh.md
src/: lib.rs
src/experimental/: lib.rs
src/tests/: mod.rs
