[package]
name = "gitchat"
version = "0.2.0"
edition = "2021"
description = "Use your model chat like git!"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }

[features]
experimental = []
canary = ["experimental"]
